packages/orchestration/base/networking/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-the-service
                port:
                  number: 8666
